test_case/rust-lang_rust/53305_412479678.rs
plain
    30% |█████████▉                      | 1.4MB 13.7MB/s eta 0:00:01
    30% |██████████                      | 1.4MB 15.1MB/s eta 0:00:01
    31% |██████████                      | 1.4MB 14.0MB/s eta 0:00:01
    31% |██████████                      | 1.4MB 12.3MB/s eta 0:00:01
    31% |█████████��[K    56% |██████████████████              | 2.5MB 22.4MB/s eta 0:00:01
    56% |██████████████████▏             | 2.5MB 15.9MB/s eta 0:00:01
    56% |██████████████████▏             | 2.5MB 15.9MB/s eta 0:00:01
    57% |██████████████████▎             | 2.5MB 19.6MB/s eta 0:00:01
    57% |██████████████████▍             | 2.5MB 19.5MB/s eta 0:00:01
---
travis_time:start:test_ui_nll
Check compiletest suite=ui mode=ui compare_mode=nll (x86_64-unknown-linux-gnu -> x86_64-unknown-linux-gnu)
[00:50:10] 
[00:50:10] running 2253 tests
[00:50:14] ............................................ii..........iii..F........F.............................
[00:50:18] ..............F...i.................................................................................
[00:50:23] ....................................................................................................
[00:50:26] ....................................................................................................
[00:50:28] ....................................................................................................
[00:50:30] ....................................................................................................
[00:50:30] ....................................................................................................
[00:50:34] ...........................F........................................................................
[00:50:37] ....................................................................................................
[00:50:39] .............................i........................................................F.............
[00:50:44] ....................................................................................................
[00:50:46] ....................................................................................................
[00:50:46] ....................................................................................................
[00:50:50] ...........................................................................F........................
[00:50:52] .................iiiiiiiii..........................................................................
[00:50:59] ....................................................................................................
[00:51:02] .......................i............................................................................
[00:51:05] ..................................i.................................................................
[00:51:08] ....................................................................................................
---
[00:51:17] 
[00:51:17] ---- [ui (nll)] ui/borrowck/issue-51117.rs stdout ----
[00:51:17] diff of stderr:
[00:51:17] 
[00:51:17] 7    |             ^^^ second mutable borrow occurs here
[00:51:17] 8 LL |             drop(baz);
[00:51:17] +    |
[00:51:17] +    |
[00:51:17] + note: consider extracting this into a `let`-binding
[00:51:17] +   --> $DIR/issue-51117.rs:20:13
[00:51:17] +    |
[00:51:17] + LL |             bar.take(); //~ ERROR cannot borrow
[00:51:17] 10 
[00:51:17] 11 error: aborting due to previous error
[00:51:17] 12 
[00:51:17] 
[00:51:17] 
[00:51:17] 
[00:51:17] The actual stderr differed from the expected stderr.
[00:51:17] Actual stderr saved to /checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/borrowck/issue-51117.nll/issue-51117.nll.stderr
[00:51:17] To update references, rerun the tests and pass the `--bless` flag
[00:51:17] To only update this specific test, also pass `--test-args borrowck/issue-51117.rs`
[00:51:17] error: 1 errors occurred comparing output.
[00:51:17] status: exit code: 1
[00:51:17] status: exit code: 1
[00:51:17] command: "/checkout/obj/build/x86_64-unknown-linux-gnu/stage2/bin/rustc" "/checkout/src/test/ui/borrowck/issue-51117.rs" "--target=x86_64-unknown-linux-gnu" "--error-format" "json" "-Zui-testing" "-C" "prefer-dynamic" "-o" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/borrowck/issue-51117.nll/a" "-Zborrowck=mir" "-Ztwo-phase-borrows" "-Crpath" "-O" "-Zunstable-options" "-Lnative=/checkout/obj/build/x86_64-unknown-linux-gnu/native/rust-test-helpers" "-L" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/borrowck/issue-51117.nll/auxiliary" "-A" "unused"
[00:51:17] ------------------------------------------
[00:51:17] 
[00:51:17] ------------------------------------------
[00:51:17] stderr:
[00:51:17] stderr:
[00:51:17] ------------------------------------------
[00:51:17] {"message":"cannot borrow `*bar` as mutable more than once at a time","code":{"code":"E0499","explanation":"\nA variable was borrowed as mutable more than once. Erroneous code example:\n\n